main.css
/* ... */
.accordion-item:hover,
.accordion-combo-data:hover {
    background-color: var(--g2-fade);
}

.accordion-combo-data-extra-space {
    margin-top: 10px;
}

.wrapper .context-menu {
    padding: 10px 12px;
}

.content .context-item {
    list-style: none;
    height: 50px;
    width: 100%;
    cursor: pointer;
    margin-bottom: 2px;
    display: flex;
    align-items: center;
    border-radius: 5px;
    padding: 0 5px 0 10px;
    transition: 0.3s;
}

.content .context-item:hover {
    background-color: #d3d3d375;
}

.content .context-item-disabled {
    color: rgba(0,0,0,0.2);
}

.content .context-item-disabled:hover {
    color: rgba(0,0,0,0.2);
    background-color: #d3d3d325;
}

.icon {
    width: 25px;
    height: 25px;
    background-size: 200%;
    margin-right: 5px;
}

.add-rule-icon {
    margin: 4px;
    width: 34px;
    height: 34px;
    opacity: 0.4;
    transition: 0.3s;
}

.enabled-icon .add-rule-icon:hover {
    opacity: 0.7;
}

.disabled-icon {
    transition: 0.3s;
}

.disabled-icon:hover {
    opacity: 0.4;
}

.play-icon {
    background: url("./Bootstrap/svg/play-fill.svg");
}

.trash-icon {
    background: url("./Bootstrap/svg/trash3-fill.svg");
}

.edit-icon {
    background: url("./Bootstrap/svg/pencil-square.svg");
}

.target-border {
    border: var(--bs-border-width) solid var(--bs-border-color);
}

.target-dropdown {
    padding-left: 12px;
    padding-right: 12px;
    padding-top: 16px;
    padding-bottom: 16px;
    height: 58px;
    margin-top: 6px;
    border: var(--bs-border-width) solid var(--bs-border-color);
}

.target-dropdown:hover {
    border: var(--bs-border-width) solid var(--bs-border-color);
}

.replace-input-width .target-dropdown {
    margin-top: 0px;
    height: 42px;
}

.dropdown-item {
    height: 2.25rem;
}

.dropdown-scroll {
    scroll-behavior: smooth;
    overflow: auto;
    max-height: 250px;
}

.btn-dark.btn-filter {
    background-color: var(--darkness);
    border-color: var(--g1);
}

.btn-dark.btn-filter:hover {
    background-color: var(--darkness-bg);
}

.p-move {
    margin: 0.25rem 1rem 0.25rem 1rem;
}

.meatballs-div {
    position: absolute;
    right: 2rem;
}

.meatballs-icon {
    height: 2rem;
    width: 2rem;
}

.buffer-right-slightly {
    margin-right: 0.5rem;
}

.inner-addon {
    background-color: var(--bs-form-control-disabled-bg);
    position: relative;
    margin: 0px;
}

.inner-addon .gliphicon {
    margin: 5px;
    pointer-events: none;
    position: absolute;
}

.replace-input-width {
    flex: 1 1 auto;
}

.gliphicon-box {
    cursor: default;
    background-color: -internal-light-dark(rgba(239, 239, 239, 0.3), rgba(59, 59, 59, 0.3));
    color: -internal-light-dark(rgb(84, 84, 84), rgb(170, 170, 170));
    border-color: rgba(118, 118, 118, 0.3);
    width: 45px;
}

.inner-addon .x {
    position: absolute;
    margin-left: 24px;
    margin-top: 5px;
    width: 22px;
    height: 22px;
    opacity: 0.1;
    transition: 0.3s;
}

.flex {
    display: flex;
}

.char-box {
    width: 45px;
    position: relative;
    display: inline-flex;
    margin-right: 10px;
    margin-bottom: 2px;
}

.id-box-container {
    position: relative;
    display: inline-flex;
    margin-right: 10px;
    border: 2px solid rgba(118, 118, 118, 0.3);
    cursor: default;
    padding-left: 3px;
    background-color: -internal-light-dark(rgba(239, 239, 239, 0.3), rgba(59, 59, 59, 0.3));
    color: -internal-light-dark(rgb(84, 84, 84), rgb(170, 170, 170));
}

.id-box-container .x {
    position: relative;
    margin-left: 2px;
    margin-top: 3px;
}

.id-box-container:hover .x {
    opacity: 1;
}

.char-box:hover .x {
    opacity: 1;
}

.hide {
    display: none;
}

.dropdown-header {
    color: var(--bs-regular-text);
}

#choose_stage_dropdown_dropdown,
#choose_character_dropdown_dropdown {
    height: 300px;
    -webkit-column-count: 3;
    column-count: 3;
    -moz-column-count: 3;
}

.showing-x-of-y {
    text-align: center;
    margin-top: 8px;
    color: var(--non-highlighted-text-color);
}

#comboSlippi_settings_button,
#parseSlippi_settings_button,
img.gear-icon.settings-icon {
    width: 1.75rem;
    margin-left: 0.75rem;
    transition: 0.3s;
    opacity: 0.3;
}

#comboSlippi_settings_button:hover,
#parseSlippi_settings_button:hover,
img.gear-icon:hover {
    opacity: 0.9;
}

.settingsInputWrapper {
    text-align: center;
}

.settingsInput {
    width: 100%;
    margin-bottom: 5px;
}

input:-internal-autofill-selected {
    background-color: var(--bs-form-control-bg) !important;
}

.fifty-fifty-column-split {
    width: calc(100% - 20px);
    margin-left: 10px;
}

#parseSlippi_times_table {
    padding-left: 0;
    padding-right: 0;
}

#parseSlippi_times_table > table {
    border: solid 3px var(--bs-border-color);
    border-radius: 3px;
}

